# tree-sitter-reduce

./: Cargo.toml  README.md  shell.nix
rsreduce/: Cargo.toml
rsreduce/src/: main.rs
tree-sitter-reduce/: Cargo.toml
tree-sitter-reduce/src/: job.rs  lib.rs  pass.rs  run.rs  runner.rs  test.rs  util.rs  workers.rs
tree-sitter-reduce/src/passes/: dichotomy.rs  mod.rs  remove_lines.rs
tree-sitter-reduce/src/passes/generic/: discard_whitespace.rs  mod.rs  remove_lines.rs  tree_sitter_replace.rs
