[workspace]
members = [
    "tree-sitter-reduce",
    "rsreduce",
]

[workspace.dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5.6"
ctrlc = "3.2"
fs_extra = "1.3"
fxhash = "0.2.1"
kine = { version = "0.1.3", features = ["icu", "tz-utc-provider-builtin-iers", "tz-system-provider-builtin-iers"] }
indicatif = "0.17.3"
rand = "0.8.5"
structopt = "0.3.26"
tempfile = "3.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tree-sitter-reduce = { path = "./tree-sitter-reduce" }
walkdir = "2.3"

[patch.crates-io]
# See https://github.com/console-rs/indicatif/pull/518
indicatif = { git = "https://github.com/Ekleog/indicatif", rev = "025a566b861ed953e340e74f3008121a9b721ee3" }
