[package]
name = "tree-sitter-reduce"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
fs_extra.workspace = true
fxhash.workspace = true
rand.workspace = true
rand_distr.workspace = true
structopt.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
